# agentic-trading-system

./: .gitignore  README.md  agent_evaluator.py  data_loader.py  main.py  orch_out.txt  pyproject.toml  scrapper.py  sys_1.py  test.py
.cursor/plans/: project_audit_summary_7f376616.plan.md
agent/: graph_img.py  llm_factory.py  nodes.py  schemas.py  trading_agent.py
agent/prompts/: fundamental_system_prompt.md  orchestrator_1.md  orchestrator_2.md  orchestrator_system_prompt.md  risk_manager_system_prompt.md  technical_system_prompt.md  trading_system_prompt.md
market_context_json/: LT_NS_market_context.json  NIFTY_50_market_context.json  SBIN_NS_market_context.json  TEST_market_context.json
utils/: __init__.py  data_loader.py  market_context.py  technical_indicators.py
web/backend/: portfolio.py  server.py  stream.py  tasks.py
web/frontend/: app.js  index.html  style.css
