[project]
name = "lang-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "langgraph>=1.1.3",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "scipy>=1.15.3",
    "yahoo-finance>=1.4.0",
    "yfinance>=1.2.0",
]
