[project]
name = "lang-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bs4>=0.0.2",
    "requests>=2.32.0",
    "dotenv>=0.9.9",
    "ipython>=8.39.0",
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.3",
    "lxml>=6.0.2",
    "matplotlib>=3.10.8",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "scipy>=1.15.3",
    "yahoo-finance>=1.4.0",
    "yfinance>=1.2.0",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "langchain-nvidia-ai-endpoints>=1.2.1",
    "ta>=0.11.0",
    "fastapi>=0.136.0",
    "uvicorn[standard]>=0.44.0",
    "sse-starlette>=3.3.4",
]
